<resources>
    <string name="app_name">My Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="currentTemperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="date">Jan 31</string>
    <string name="sunriseTime">8:00am</string>
    <string name="sunsetTime">9:00pm</string>
    <string name="highTemp">High: %1$d°</string>
    <string name="lowTemp">Low: %1$d°</string>
    <string name="temp">Temp: %1$d°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="zipCode">Zip Code</string>
    <string name="submit">SUBMIT</string>
    <string name="ok">OK</string>
    <string name="location_button">Location</string>
    <string name="location_permission_rationale">Need permission to access location</string>
    <string name="okay">okay</string>
    <string name="notification_button">Turn on notifications</string>
    <string name="channel_name">Notification Channel Name</string>
    <string name="channel_description">Channel Description</string>
</resources>