<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.search.SearchFragment">

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/zipCode"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="6dp"
        android:inputType="number" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_button" />

    <Button
        android:id="@+id/notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_button" />

</LinearLayout>